// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`combobox [snapshot] > disabled 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <div
    class="vesper-combobox vesper-combobox-md vesper-combobox-default"
    data-disabled=""
    data-placeholder=""
    role="group"
  >
    <svg
      class="vesper-combobox-search-icon"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 6.61133V12.3887L14.7334 13.6543L21 19.9209L19.9209 21L13.6543 14.7334L12.3887 16H6.61133L3 12.3887V6.61133L6.61133 3H12.3887L16 6.61133ZM4.5 7.23242V11.7676L7.23242 14.5H11.7676L14.5 11.7676V7.23242L11.7676 4.5H7.23242L4.5 7.23242Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocapitalize="none"
      autocomplete="off"
      autocorrect="off"
      class="vesper-typography vesper-typography-copy-sm vesper-combobox-input"
      data-disabled=""
      disabled=""
      id="_r_3m_"
      placeholder="Search..."
      role="combobox"
      spellcheck="false"
      value=""
    />
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Show options"
      class="vesper-combobox-trigger"
      data-disabled=""
      data-placeholder=""
      disabled=""
      tabindex="-1"
      type="button"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;

exports[`combobox [snapshot] > full options 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <label
    class="vesper-typography vesper-typography-label-sm vesper-form-input-wrapper-label"
    for="_r_3s_"
  >
    Label text *
  </label>
  <div
    class="vesper-combobox vesper-combobox-lg vesper-combobox-error"
    role="group"
  >
    <svg
      class="vesper-combobox-search-icon"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 6.61133V12.3887L14.7334 13.6543L21 19.9209L19.9209 21L13.6543 14.7334L12.3887 16H6.61133L3 12.3887V6.61133L6.61133 3H12.3887L16 6.61133ZM4.5 7.23242V11.7676L7.23242 14.5H11.7676L14.5 11.7676V7.23242L11.7676 4.5H7.23242L4.5 7.23242Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      aria-autocomplete="list"
      aria-describedby="_r_3t_"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Label text"
      aria-required="true"
      autocapitalize="none"
      autocomplete="off"
      autocorrect="off"
      class="vesper-typography vesper-typography-copy-md vesper-combobox-input"
      id="_r_3s_"
      placeholder="Placeholder text"
      role="combobox"
      spellcheck="false"
      value="Apple"
    />
    <button
      aria-label="Clear selection"
      class="vesper-combobox-clear"
      data-visible=""
      tabindex="-1"
      type="button"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
          fill="currentColor"
        />
      </svg>
    </button>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Show options"
      class="vesper-combobox-trigger"
      tabindex="-1"
      type="button"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-error"
    data-message="true"
    id="_r_3t_"
  >
    <span
      aria-hidden="true"
      class="vesper-form-input-message-icon"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M21 8V16L16 21H8L3 16V8L8 3H16L21 8ZM11.4932 15.2422L10.9766 15.7578V16.7881L11.4932 17.3027H12.5264L13.042 16.7881V15.7578L12.5264 15.2422H11.4932ZM11.2354 7L10.7188 7.51562L11.2354 13.6973L11.751 14.2119H12.2676L12.7842 13.6973L13.3008 7.51562L12.7842 7H11.2354Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="vesper-typography vesper-typography-label-xs vesper-form-input-message-text"
    >
      Message text
    </span>
  </output>
</div>
`;

exports[`combobox [snapshot] > required 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <label
    class="vesper-typography vesper-typography-label-sm vesper-form-input-wrapper-label"
    for="_r_3a_"
  >
    Label text *
  </label>
  <div
    class="vesper-combobox vesper-combobox-md vesper-combobox-default"
    data-placeholder=""
    role="group"
  >
    <svg
      class="vesper-combobox-search-icon"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 6.61133V12.3887L14.7334 13.6543L21 19.9209L19.9209 21L13.6543 14.7334L12.3887 16H6.61133L3 12.3887V6.61133L6.61133 3H12.3887L16 6.61133ZM4.5 7.23242V11.7676L7.23242 14.5H11.7676L14.5 11.7676V7.23242L11.7676 4.5H7.23242L4.5 7.23242Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Label text"
      aria-required="true"
      autocapitalize="none"
      autocomplete="off"
      autocorrect="off"
      class="vesper-typography vesper-typography-copy-sm vesper-combobox-input"
      id="_r_3a_"
      placeholder="Search..."
      role="combobox"
      spellcheck="false"
      value=""
    />
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Show options"
      class="vesper-combobox-trigger"
      data-placeholder=""
      tabindex="-1"
      type="button"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;

exports[`combobox [snapshot] > size: lg 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <div
    class="vesper-combobox vesper-combobox-lg vesper-combobox-default"
    data-placeholder=""
    role="group"
  >
    <svg
      class="vesper-combobox-search-icon"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 6.61133V12.3887L14.7334 13.6543L21 19.9209L19.9209 21L13.6543 14.7334L12.3887 16H6.61133L3 12.3887V6.61133L6.61133 3H12.3887L16 6.61133ZM4.5 7.23242V11.7676L7.23242 14.5H11.7676L14.5 11.7676V7.23242L11.7676 4.5H7.23242L4.5 7.23242Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocapitalize="none"
      autocomplete="off"
      autocorrect="off"
      class="vesper-typography vesper-typography-copy-md vesper-combobox-input"
      id="_r_2u_"
      placeholder="Search..."
      role="combobox"
      spellcheck="false"
      value=""
    />
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Show options"
      class="vesper-combobox-trigger"
      data-placeholder=""
      tabindex="-1"
      type="button"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;

exports[`combobox [snapshot] > size: md 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <div
    class="vesper-combobox vesper-combobox-md vesper-combobox-default"
    data-placeholder=""
    role="group"
  >
    <svg
      class="vesper-combobox-search-icon"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 6.61133V12.3887L14.7334 13.6543L21 19.9209L19.9209 21L13.6543 14.7334L12.3887 16H6.61133L3 12.3887V6.61133L6.61133 3H12.3887L16 6.61133ZM4.5 7.23242V11.7676L7.23242 14.5H11.7676L14.5 11.7676V7.23242L11.7676 4.5H7.23242L4.5 7.23242Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocapitalize="none"
      autocomplete="off"
      autocorrect="off"
      class="vesper-typography vesper-typography-copy-sm vesper-combobox-input"
      id="_r_2o_"
      placeholder="Search..."
      role="combobox"
      spellcheck="false"
      value=""
    />
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Show options"
      class="vesper-combobox-trigger"
      data-placeholder=""
      tabindex="-1"
      type="button"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;

exports[`combobox [snapshot] > size: sm 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <div
    class="vesper-combobox vesper-combobox-sm vesper-combobox-default"
    data-placeholder=""
    role="group"
  >
    <svg
      class="vesper-combobox-search-icon"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 6.61133V12.3887L14.7334 13.6543L21 19.9209L19.9209 21L13.6543 14.7334L12.3887 16H6.61133L3 12.3887V6.61133L6.61133 3H12.3887L16 6.61133ZM4.5 7.23242V11.7676L7.23242 14.5H11.7676L14.5 11.7676V7.23242L11.7676 4.5H7.23242L4.5 7.23242Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocapitalize="none"
      autocomplete="off"
      autocorrect="off"
      class="vesper-typography vesper-typography-copy-xs vesper-combobox-input"
      id="_r_2i_"
      placeholder="Search..."
      role="combobox"
      spellcheck="false"
      value=""
    />
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Show options"
      class="vesper-combobox-trigger"
      data-placeholder=""
      tabindex="-1"
      type="button"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;

exports[`combobox [snapshot] > variant: default 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <div
    class="vesper-combobox vesper-combobox-md vesper-combobox-default"
    data-placeholder=""
    role="group"
  >
    <svg
      class="vesper-combobox-search-icon"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 6.61133V12.3887L14.7334 13.6543L21 19.9209L19.9209 21L13.6543 14.7334L12.3887 16H6.61133L3 12.3887V6.61133L6.61133 3H12.3887L16 6.61133ZM4.5 7.23242V11.7676L7.23242 14.5H11.7676L14.5 11.7676V7.23242L11.7676 4.5H7.23242L4.5 7.23242Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      aria-autocomplete="list"
      aria-describedby="_r_1r_"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocapitalize="none"
      autocomplete="off"
      autocorrect="off"
      class="vesper-typography vesper-typography-copy-sm vesper-combobox-input"
      id="_r_1q_"
      placeholder="Search..."
      role="combobox"
      spellcheck="false"
      value=""
    />
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Show options"
      class="vesper-combobox-trigger"
      data-placeholder=""
      tabindex="-1"
      type="button"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="true"
    id="_r_1r_"
  >
    <span
      aria-hidden="true"
      class="vesper-form-input-message-icon"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M18.1582 3L21 5.8418V18.1582L18.1582 21H5.8418L3 18.1582V5.8418L5.8418 3H18.1582ZM11.4941 9.97461L10.9873 10.4814V16.5566L11.4941 17.0625H12.5059L13.0127 16.5566V10.4814L12.5059 9.97461H11.4941ZM11.4941 6.9375L10.9873 7.44336V8.45605L11.4941 8.96289H12.5059L13.0127 8.45605V7.44336L12.5059 6.9375H11.4941Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="vesper-typography vesper-typography-label-xs vesper-form-input-message-text"
    >
      Message text
    </span>
  </output>
</div>
`;

exports[`combobox [snapshot] > variant: error 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <div
    class="vesper-combobox vesper-combobox-md vesper-combobox-error"
    data-placeholder=""
    role="group"
  >
    <svg
      class="vesper-combobox-search-icon"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 6.61133V12.3887L14.7334 13.6543L21 19.9209L19.9209 21L13.6543 14.7334L12.3887 16H6.61133L3 12.3887V6.61133L6.61133 3H12.3887L16 6.61133ZM4.5 7.23242V11.7676L7.23242 14.5H11.7676L14.5 11.7676V7.23242L11.7676 4.5H7.23242L4.5 7.23242Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      aria-autocomplete="list"
      aria-describedby="_r_2d_"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocapitalize="none"
      autocomplete="off"
      autocorrect="off"
      class="vesper-typography vesper-typography-copy-sm vesper-combobox-input"
      id="_r_2c_"
      placeholder="Search..."
      role="combobox"
      spellcheck="false"
      value=""
    />
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Show options"
      class="vesper-combobox-trigger"
      data-placeholder=""
      tabindex="-1"
      type="button"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-error"
    data-message="true"
    id="_r_2d_"
  >
    <span
      aria-hidden="true"
      class="vesper-form-input-message-icon"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M21 8V16L16 21H8L3 16V8L8 3H16L21 8ZM11.4932 15.2422L10.9766 15.7578V16.7881L11.4932 17.3027H12.5264L13.042 16.7881V15.7578L12.5264 15.2422H11.4932ZM11.2354 7L10.7188 7.51562L11.2354 13.6973L11.751 14.2119H12.2676L12.7842 13.6973L13.3008 7.51562L12.7842 7H11.2354Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="vesper-typography vesper-typography-label-xs vesper-form-input-message-text"
    >
      Message text
    </span>
  </output>
</div>
`;

exports[`combobox [snapshot] > variant: success 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <div
    class="vesper-combobox vesper-combobox-md vesper-combobox-success"
    data-placeholder=""
    role="group"
  >
    <svg
      class="vesper-combobox-search-icon"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 6.61133V12.3887L14.7334 13.6543L21 19.9209L19.9209 21L13.6543 14.7334L12.3887 16H6.61133L3 12.3887V6.61133L6.61133 3H12.3887L16 6.61133ZM4.5 7.23242V11.7676L7.23242 14.5H11.7676L14.5 11.7676V7.23242L11.7676 4.5H7.23242L4.5 7.23242Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      aria-autocomplete="list"
      aria-describedby="_r_27_"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocapitalize="none"
      autocomplete="off"
      autocorrect="off"
      class="vesper-typography vesper-typography-copy-sm vesper-combobox-input"
      id="_r_26_"
      placeholder="Search..."
      role="combobox"
      spellcheck="false"
      value=""
    />
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Show options"
      class="vesper-combobox-trigger"
      data-placeholder=""
      tabindex="-1"
      type="button"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-success"
    data-message="true"
    id="_r_27_"
  >
    <span
      aria-hidden="true"
      class="vesper-form-input-message-icon"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM16.2402 8.2959L9.79102 14.4355H9.7793L7.75977 12.5127L7.58691 12.3486L7.41504 12.5127L6.82715 13.0713L6.6377 13.252L6.82715 13.4336L9.16406 15.6572L9.23633 15.7266H10.334L10.4062 15.6572L17.1729 9.2168L17.3623 9.03516L17.1729 8.85449L16.585 8.2959L16.4131 8.13184L16.2402 8.2959Z"
          fill="currentColor"
        />
      </svg>
    </span>
    <span
      class="vesper-typography vesper-typography-label-xs vesper-form-input-message-text"
    >
      Message text
    </span>
  </output>
</div>
`;

exports[`combobox [snapshot] > variant: warning 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <div
    class="vesper-combobox vesper-combobox-md vesper-combobox-warning"
    data-placeholder=""
    role="group"
  >
    <svg
      class="vesper-combobox-search-icon"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 6.61133V12.3887L14.7334 13.6543L21 19.9209L19.9209 21L13.6543 14.7334L12.3887 16H6.61133L3 12.3887V6.61133L6.61133 3H12.3887L16 6.61133ZM4.5 7.23242V11.7676L7.23242 14.5H11.7676L14.5 11.7676V7.23242L11.7676 4.5H7.23242L4.5 7.23242Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      aria-autocomplete="list"
      aria-describedby="_r_21_"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocapitalize="none"
      autocomplete="off"
      autocorrect="off"
      class="vesper-typography vesper-typography-copy-sm vesper-combobox-input"
      id="_r_20_"
      placeholder="Search..."
      role="combobox"
      spellcheck="false"
      value=""
    />
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Show options"
      class="vesper-combobox-trigger"
      data-placeholder=""
      tabindex="-1"
      type="button"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-warning"
    data-message="true"
    id="_r_21_"
  >
    <span
      aria-hidden="true"
      class="vesper-form-input-message-icon"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M22 18.5537L20.876 20.5H3.10352L2 18.5898L10.9658 3.5H13.0557L22 18.5537ZM11.4932 16.2422L10.9766 16.7578V17.7881L11.4932 18.3027H12.5264L13.042 17.7881V16.7578L12.5264 16.2422H11.4932ZM11.2354 8L10.7188 8.51562L11.2354 14.6973L11.751 15.2119H12.2676L12.7842 14.6973L13.3008 8.51562L12.7842 8H11.2354Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="vesper-typography vesper-typography-label-xs vesper-form-input-message-text"
    >
      Message text
    </span>
  </output>
</div>
`;

exports[`combobox [snapshot] > with label 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <label
    class="vesper-typography vesper-typography-label-sm vesper-form-input-wrapper-label"
    for="_r_34_"
  >
    Label text
  </label>
  <div
    class="vesper-combobox vesper-combobox-md vesper-combobox-default"
    data-placeholder=""
    role="group"
  >
    <svg
      class="vesper-combobox-search-icon"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 6.61133V12.3887L14.7334 13.6543L21 19.9209L19.9209 21L13.6543 14.7334L12.3887 16H6.61133L3 12.3887V6.61133L6.61133 3H12.3887L16 6.61133ZM4.5 7.23242V11.7676L7.23242 14.5H11.7676L14.5 11.7676V7.23242L11.7676 4.5H7.23242L4.5 7.23242Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Label text"
      autocapitalize="none"
      autocomplete="off"
      autocorrect="off"
      class="vesper-typography vesper-typography-copy-sm vesper-combobox-input"
      id="_r_34_"
      placeholder="Search..."
      role="combobox"
      spellcheck="false"
      value=""
    />
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Show options"
      class="vesper-combobox-trigger"
      data-placeholder=""
      tabindex="-1"
      type="button"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;

exports[`combobox [snapshot] > with value 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <div
    class="vesper-combobox vesper-combobox-md vesper-combobox-default"
    role="group"
  >
    <svg
      class="vesper-combobox-search-icon"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 6.61133V12.3887L14.7334 13.6543L21 19.9209L19.9209 21L13.6543 14.7334L12.3887 16H6.61133L3 12.3887V6.61133L6.61133 3H12.3887L16 6.61133ZM4.5 7.23242V11.7676L7.23242 14.5H11.7676L14.5 11.7676V7.23242L11.7676 4.5H7.23242L4.5 7.23242Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocapitalize="none"
      autocomplete="off"
      autocorrect="off"
      class="vesper-typography vesper-typography-copy-sm vesper-combobox-input"
      id="_r_3g_"
      placeholder="Search..."
      role="combobox"
      spellcheck="false"
      value="Banana"
    />
    <button
      aria-label="Clear selection"
      class="vesper-combobox-clear"
      data-visible=""
      tabindex="-1"
      type="button"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
          fill="currentColor"
        />
      </svg>
    </button>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Show options"
      class="vesper-combobox-trigger"
      tabindex="-1"
      type="button"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;
